--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <input id="input-el" type="text">
-    <button id="button-el">SAVE INPUT</button>
+    <button id="button-el" onclick="btn()">SAVE INPUT</button>
 </body>
 
 </html>
