--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <input id="input-el" type="text">
     <button id="button-el">SAVE INPUT</button>
+    <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
     <script src="script.js"></script>
 </body>
