--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
     <input id="input-el" type="text">
     <button id="button-el">SAVE INPUT</button>
+    <button id="tab-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
+    <p id="p-el"></p>
     <script src="script.js"></script>
 </body>
 
