--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <input id="input-el" type="text">
-    <button id="button-el">SAVE INPUT</button>
+    <input type="text" id="input-el">
+    <button id="input-btn">SAVE INPUT</button>
     <button id="tab-btn">SAVE TAB</button>
     <button id="delete-btn">DELETE ALL</button>
-    <ul id="ul-el"></ul>
-    <p id="p-el"></p>
+    <ul id="ul-el">
+    </ul>
     <script src="script.js"></script>
 </body>
 
